--- a/templates/login.html
+++ b/templates/login.html
@@ -6,29 +6,20 @@
 
   <div>
     <label for="email" class="sr-only">Email Address</label>
-    <input type="email"
-           name="email"
-           class="form-control input-lg"
-           placeholder="Email Address"
-           required
-           autofocus>
+    <input type="email" name="email" class="form-control input-lg" placeholder="Email Address" required autofocus>
   </div>
 
   <div class="mt-4">
     <label for="password" class="sr-only">Password</label>
-    <input type="password"
-           name="password"
-           class="form-control input-lg"
-           placeholder="Password"
-           required>
+    <input type="password" name="password" class="form-control input-lg" placeholder="Password" required>
   </div>
 
   <button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Sign In
   </button>
 
 </form>
-
+<!-- 
 </body>
-</html>
+</html> -->
 
 {% endblock %}
