Fixed add to cart function

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 {% block body %}
 
 <form class="form-signin" method="POST">
@@ -18,8 +20,9 @@
   </button>
 
 </form>
-<!-- 
+
 </body>
-</html> -->
+
+</html>
 
 {% endblock %}
