--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="/cart"> <img class="melon-cart" src="/static/img/watermelon.png">My Melon
                         Cart</a>
-                    <a class="nav-link" href="#">Log In</a>
+                    <a class="nav-link" href="/login">Log In</a>
                 </div>
             </div>
         </div>
